--- a/chipiron/runs/GameSettings/setting_navo.yaml
+++ b/chipiron/runs/GameSettings/setting_navo.yaml
@@ -3,8 +3,8 @@ verbose: No
 secondsPerMoveWhite: 2
 secondsPerMoveBlack: 10
 #options: classic fromFile FEN
-startingPosition:
+starting_position:
   type: fromFile
   options:
-    fileName: Board1.text
+    file_name: Board1.text
 
