--- a/chipiron/runs/players/ZipfSequoolNN2.yaml
+++ b/chipiron/runs/players/ZipfSequoolNN2.yaml
@@ -2,14 +2,14 @@ name: ZipfSequoolNN2
 type: TreeAndValue
 tree_builder: 
   type: ZipfSequool
-  tree_move_limit: 251
+  tree_move_limit: 250
   zipf_style: ZipfOne
   opening_type: all_children
   move_selection_rule: 
    type: almost_equal_logistic
    temperature: 50
 board_evaluator:
-  type: NN4Pytorch
+  type: nn_pp1
   nn_param_file_name: 'NN104/param_class_learn_full_board.pt'
   syzygy_evaluation: True
 syzygy_play: True
