--- a/chipiron/runs/players/RecurZipf.yaml
+++ b/chipiron/runs/players/RecurZipf.yaml
@@ -5,9 +5,9 @@ tree_builder:
   tree_move_limit: 200000
   move_explorer_priority: 'priority_best'
   opening_type: all_children
-  openingResponsive: False
 board_evaluator:
-  type: nn_pp1
+  type: neural_network
+  subtype: pp1
   nn_param_file_name: 'nn_pp1/param.pt'
   syzygy_evaluation: True
 syzygy_play: True
