--- a/chipiron/scripts/learn_nn_supervised/exp_options.yaml
+++ b/chipiron/scripts/learn_nn_supervised/exp_options.yaml
@@ -1,1 +1,20 @@
-nn_type : NetPP2D2_2
+neural_network:
+    nn_type: pp2d2_2
+    nn_param_folder_name: 'base'
+create_nn_file: True
+config_file_name: 'chipiron/scripts/learn_nn_supervised/exp_options.yaml'
+stockfish_boards_train_file_name: '/home/victor/goodgames_plusvariation_stockfish_eval_train_t.1_merge.pi'
+stockfish_boards_test_file_name: '/home/victor/goodgames_plusvariation_stockfish_eval_test'
+preprocessing_data_set: False
+batch_size_train: 32
+batch_size_test: 10
+saving_interval: 1000
+saving_intermediate_copy: True
+saving_intermediate_copy_interval: 100000
+min_interval_lr_change: 1000000
+starting_lr: .0001
+min_lr: .00001
+momentum_op: .9
+scheduler_step_size: 1
+scheduler_gamma: .5
+reuse_existing_trainer: False
