making the human player work after the refactoring

--- a/chipiron/scripts/one_match/exp_options.yaml
+++ b/chipiron/scripts/one_match/exp_options.yaml
@@ -1,5 +1,5 @@
 seed: 11
 gui: True
 file_name_player_one: 'RecurZipfBase4.yaml'
-file_name_player_two:  'RecurZipfBase3.yaml'
+file_name_player_two:  'Human.yaml'
 file_name_match_setting: 'setting_duda.yaml'
