--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 ###### Requirements without Version Specifiers ######
-gdown
 PyYAML
 
 ###### Requirements with Version Specifiers ######
@@ -13,3 +12,4 @@ torch~=1.10.1
 bidict~=0.21.2
 numba~=0.53.1
 graphviz~=0.16
+gdown >= 4.3.0
