--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,14 @@ PyYAML
 
 
 ###### Requirements with Version Specifiers ######
-PyQt5~=5.15.4
+PyQt5>=5.15.4
 chess >= 1.8.0
-matplotlib~=3.4.3
-sortedcollections~=2.1.0
-pandas~=1.2.4
-numpy~=1.19.5
-torch~=1.10.1
-bidict~=0.21.2
-numba~=0.53.1
-graphviz~=0.16
+matplotlib>=3.4.3
+sortedcollections>=2.1.0
+pandas>=1.2.4
+numpy>=1.19.5
+torch>=1.10.1
+bidict>=0.21.2
+numba>=0.53.1
+graphviz>=0.16
 gdown >= 4.3.0
