--- a/data/players/RecurZipfBase3.yaml
+++ b/data/players/RecurZipfBase3.yaml
@@ -15,5 +15,8 @@ board_evaluator:
   neural_network:
       nn_type: pp2d2_2_prelu
       nn_param_folder_name: 'param_prelu'
+      representation: '364'
   syzygy_evaluation: True
 syzygy_play: True
+
+
