--- a/data/players/player_config/Sequool.yaml
+++ b/data/players/player_config/Sequool.yaml
@@ -2,13 +2,15 @@ name: Sequool
 type: TreeAndValue
 tree_builder: 
   type: Sequool
+  sequool:
+    index_computation : base
   opening_type: all_children
   move_selection_rule: 
     type: almost_equal_logistic
     temperature: 2
   stopping_criterion: 
     name: tree_move_limit
-    tree_move_limit: 1000
+    tree_move_limit: 10000
 board_evaluator:
   type: neural_network
   neural_network:
