--- a/data/players/player_config/RecurZipfBase3.yaml
+++ b/data/players/player_config/RecurZipfBase3.yaml
@@ -3,20 +3,20 @@ main_move_selector:
   type: TreeAndValue
   node_selector:
     type: RecurZipfBase
-  move_explorer_priority: priority_best
+    move_explorer_priority: priority_best
   opening_type: all_children
   move_selection_rule: 
     type: almost_equal_logistic
     temperature: 2
   stopping_criterion: 
-      name: tree_move_limit
+      type: tree_move_limit
       tree_move_limit: 1000
   board_evaluator:
     type: neural_network
     neural_network:
         nn_type: pp2d2_2_prelu
         nn_param_folder_name: 'param_prelu'
-    srepresentation: '364'
+    representation: '364'
     syzygy_evaluation: True
 syzygy_play: True
 
