--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,18 @@ __pycache__
 scripts/one_match/outputs/*
 scripts/learn_nn_supervised/learn_nn_supervised_outputs/*
 data/syzygy-tables/
+
+
+## Core latex/pdflatex auxiliary files:
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
