--- a/data/players/player_config/Sequool.yaml
+++ b/data/players/player_config/Sequool.yaml
@@ -1,23 +1,23 @@
 name: Sequool
-type: TreeAndValue
-tree_builder: 
-  type: Sequool
-  sequool:
+main_move_selector:
+  type: TreeAndValue
+  node_selector:
+    type: Sequool
     index_computation : base
   opening_type: all_children
-  move_selection_rule: 
+  recommender_rule:
     type: almost_equal_logistic
     temperature: 2
-  stopping_criterion: 
-    name: tree_move_limit
-    tree_move_limit: 10000
-board_evaluator:
-  type: neural_network
-  neural_network:
+  stopping_criterion:
+      type: tree_move_limit
+      tree_move_limit: 1000
+  board_evaluator:
+    type: neural_network
+    neural_network:
       nn_type: pp2d2_2_prelu
       nn_param_folder_name: 'param_prelu'
       representation: '364'
-  syzygy_evaluation: True
+    syzygy_evaluation: True
 syzygy_play: True
 
 
