--- a/data/players/player_config/Uniform.yaml
+++ b/data/players/player_config/Uniform.yaml
@@ -1,22 +1,21 @@
 name: Uniform
-type: TreeAndValue 
-tree_builder: 
-  type: Uniform
-  move_selection_rule: 
+main_move_selector:
+  type: TreeAndValue
+  node_selector:
+    type: Uniform
+    
+  opening_type: all_children
+  recommender_rule:
     type: almost_equal_logistic
     temperature: 2
-  stopping_criterion: 
-    #name: depth_limit
-    #depth_limit: 3
-    name: tree_move_limit
-    tree_move_limit: 1000
-  depth_tree: 1
-  opening_type: all_children
-board_evaluator:
-  type: neural_network
-  neural_network:
-      nn_type: pp2d2_2_prelu
-      nn_param_folder_name: 'param_prelu'
-      representation: '364'
-  syzygy_evaluation: True
+  stopping_criterion:
+      type: tree_move_limit
+      tree_move_limit: 1000
+  board_evaluator:
+    type: neural_network
+    neural_network:
+        nn_type: pp2d2_2_prelu
+        nn_param_folder_name: 'param_prelu'
+    representation: '364'
+    syzygy_evaluation: True
 syzygy_play: True
