--- a/scripts/one_match/inputs/base/exp_options.yaml
+++ b/scripts/one_match/inputs/base/exp_options.yaml
@@ -1,6 +1,6 @@
 seed: 11
-gui: True
-file_name_player_one: 'RecurZipfBase4.yaml'
+gui: False
+file_name_player_one: 'RecurZipfBase3.yaml'
 file_name_player_two:  'RecurZipfBase3.yaml'
 file_name_match_setting: 'setting_duda.yaml'
 profiling: True
