--- a/scripts/one_match/inputs/base/exp_options.yaml
+++ b/scripts/one_match/inputs/base/exp_options.yaml
@@ -1,6 +1,7 @@
 seed: 11
 gui: True
 file_name_player_one: 'RecurZipfBase3.yaml'
+file_name_player_ones: 'RecurZipfSequool.yaml'
 file_name_player_two:  'RecurZipfSequool.yaml'
 file_name_player_twos:  'RecurZipfBase3.yaml'
 file_name_match_setting: 'setting_duda.yaml'
