coding local change index with test

--- a/data/trees/tree_1.yaml
+++ b/data/trees/tree_1.yaml
@@ -25,4 +25,10 @@ nodes:
     value: 1
   - id: 8
     parents : 3
-    value: 0  
+    value: 0
+  - id: 9
+    parents : 7
+    value: 1
+  - id: 10
+    parents : 7
+    value: 2    
