--- a/data/trees/tree_1_min_global_change.yaml
+++ b/data/trees/tree_1_min_global_change.yaml
@@ -34,4 +34,10 @@ nodes:
   - id: 8
     parents : 3
     value: 0
-    index: 1.5  
+    index: 1.5
+  - id: 9
+    parents : 7
+    index: 1
+  - id: 10
+    parents : 7
+    index: 1   
