--- a/data/players/player_config/Sequool.yaml
+++ b/data/players/player_config/Sequool.yaml
@@ -3,6 +3,8 @@ main_move_selector:
   type: TreeAndValue
   node_selector:
     type: Sequool
+    recursive_selection_on_all_nodes: False
+    random_depth_pick: False
   index_computation : min_global_change
   opening_type: all_children
   recommender_rule:
@@ -10,7 +12,7 @@ main_move_selector:
     temperature: 2
   stopping_criterion:
       type: tree_move_limit
-      tree_move_limit: 1000
+      tree_move_limit: 10000
   board_evaluator:
     type: neural_network
     neural_network:
