--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PyYAML
 
 
 ###### Requirements with Version Specifiers ######
-PyQt5>=5.11.2
+PySide6>=6.6.1
 chess >= 1.10.0
 matplotlib>=3.8.2
 sortedcollections>=2.1.0
