--- a/data/players/player_config/Sequool.yaml
+++ b/data/players/player_config/Sequool.yaml
@@ -3,8 +3,9 @@ main_move_selector:
   type: TreeAndValue
   node_selector:
     type: Sequool
-    recursive_selection_on_all_nodes: False
+    recursive_selection_on_all_nodes: True
     random_depth_pick: False
+    consider_all_lesser_half_move: True
   index_computation : min_global_change
   opening_type: all_children
   recommender_rule:
@@ -12,7 +13,7 @@ main_move_selector:
     temperature: 2
   stopping_criterion:
       type: tree_move_limit
-      tree_move_limit: 1000
+      tree_move_limit: 10000
   board_evaluator:
     type: neural_network
     neural_network:
