--- a/scripts/one_match/inputs/base/exp_options.yaml
+++ b/scripts/one_match/inputs/base/exp_options.yaml
@@ -4,5 +4,5 @@ file_name_player_ones: 'Sequool.yaml'
 file_name_player_two: 'RecurZipfBase3.yaml'
 file_name_player_one:  'Sequool.yaml'
 file_name_player_twos:  'RecurZipfBase3.yaml'
-file_name_match_setting: 'setting_tron.yaml'
+file_name_match_setting: 'setting_duda.yaml'
 profiling: False
