--- a/data/players/player_config/Sequool.yaml
+++ b/data/players/player_config/Sequool.yaml
@@ -5,7 +5,7 @@ main_move_selector:
     type: Sequool
     recursive_selection_on_all_nodes: True
     random_depth_pick: False
-    consider_all_lesser_half_move: True
+    consider_all_lesser_half_move: False
   index_computation : min_global_change
   opening_type: all_children
   recommender_rule:
