--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,4 +21,4 @@ jobs:
         run: make init
 
       - name: Run tests
-        run: python a.py
+        run: python test/integration_test/one_match/test_integration.py
