--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: remove cache
         run: gh cache delete --all
+        env:
+          # This token requires the "repo" scope.
+          GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
+
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
         with:
