update dockerfile and making syzygy more optional

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,13 +14,11 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: remove cache
-        run: gh cache delete --all --repo victorgabillon/chipiron
-
-
-        env:
-          # This token requires the "repo" scope.
-          GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
+     # - name: remove cache
+     #   run: gh cache delete --all --repo victorgabillon/chipiron
+     #   env:
+     #     # This token requires the "repo" scope.
+     #     GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
 
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
