--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
      #     GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
 
       - name: echo
-        run: docker -ps -a\
+        run: docker ps -a\
             ls /var/cache/apt/archives/
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
