--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,9 @@ jobs:
      #     GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
 
       - name: echo
-        run: docker ps -a\
-            ls /var/cache/apt/archives/
+        run: |
+          docker ps -a
+          ls /var/cache/apt/archives/
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
         with:
