update dockerfile and making syzygy more optional

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,9 +25,9 @@ jobs:
           docker ps -a
           ls /var/cache/apt/archives/
           sudo apt-get autoclean
-          docker rmi $(docker images -f "dangling=true" -q) -f
-          docker rm $(docker ps -a -q)
-          docker image rm $(docker image ls -f 'dangling=true' -q)
+          sudo docker rmi $(sudo docker images -f "dangling=true" -q) -f
+          sudo docker rm $(sudo docker ps -a -q)
+          sudo docker image rm $(sudo docker image ls -f 'dangling=true' -q)
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
         with:
