--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-     # - name: remove cache
+      - uses: actions/checkout@v3
+
+      # - name: remove cache
      #   run: gh cache delete --all --repo victorgabillon/chipiron
      #   env:
      #     # This token requires the "repo" scope.
@@ -39,20 +41,9 @@ jobs:
           echo "Free space:"
           df -h
           
+      - name: Build the Docker image
+        run: docker build --no-cache --force-rm --file ./Dockerfile.test
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          dockerfile: Dockerfile.test
-          file: Dockerfile.test
-          load: true
-          tags: ${{ env.TEST_TAG }}
       - name: Test
         run: |
           docker run --rm ${{ env.TEST_TAG }}  --entrypoint [python test/integration_test/one_match/test_integration.py]   
