update dockerfile and making syzygy more optional

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,56 +3,28 @@ name: ci
 on:
   push:
     branches:
-      - "main"
-      - newtreealgos
-
-env:
-  TEST_TAG: dock_chipi_test
-  LATEST_TAG: dock_chipi_latest
+      - 'main'
+      - 'newtreealgos'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      # - name: remove cache
-     #   run: gh cache delete --all --repo victorgabillon/chipiron
-     #   env:
-     #     # This token requires the "repo" scope.
-     #     GITHUB_TOKEN: ${{ secrets.ACTION_CLEAR_CACHES_TOKEN }}
-
-      - name: echo
-        run: |
-          docker ps -a
-          ls /var/cache/apt/archives/
-          sudo apt-get autoclean
-          docker system prune
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
-
-
-      - name: Build
-        run: |
-          echo "Free space:"
-          df -h
-          
-      - name: Build the Docker image
-        run: docker build . --no-cache --force-rm --file Dockerfile.test
-
-      - name: Test
-        run: |
-          docker run --rm ${{ env.TEST_TAG }}  --entrypoint [python test/integration_test/one_match/test_integration.py]   
-
-      - name: Build and push
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          dockerfile: ./Dockerfile.test
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.LATEST_TAG }}
+          tags: user/app:latest
