--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,5 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
+          file: Dockerfile.test
+          dockerfile: Dockerfile.test
           push: true
           tags: user/app:latest
