--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,4 +29,4 @@ jobs:
           file: Dockerfile.test
           dockerfile: Dockerfile.test
           push: true
-          tags: user/app:latest
+          tags: victorgabillon/chipiron
