--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -46,5 +46,4 @@ RUN chmod -R 777 scripts
 # Timeout is set to 0 to disable the timeouts of the workers to allow Cloud Run to handle instance scaling.
 
 
-CMD ["main_chipiron_.py"]
-ENTRYPOINT ["python3"]
+CMD ["python3", "main_chipiron_.py"]
