--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -26,7 +26,7 @@ RUN apt-get install python3-tk -y
 
 RUN apt-get install wget
 RUN apt-get install curl
-RUN apt install libxcb-cursor0  libxcb-xinerama0  '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev -y  && rm -rf /var/lib/apt/lists/*
+RUN apt install xcb-cursor0 libxcb-cursor0  libxcb-xinerama0  '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev -y
 RUN pip3 install torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
 ADD ./requirements_light.txt requirements.txt
