--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -40,6 +40,7 @@ RUN pip install opencv-python-headless
 ADD . .
 
 RUN chmod -R 777 scripts
+RUN chmod -R 777 test
 
 
 # Run the web service on container startup. Here we use the gunicorn
