--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,6 @@ jobs:
           push: true
           tags: ${{ env.TEST_TAG }}
 
-      - name: Test
+      - name: Test o
         run: |
           docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python3 test/integration_test/one_match/test_integration.py
