--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -43,6 +43,11 @@ RUN chmod -R 777 scripts
 RUN chmod -R 777 test
 RUN chmod -R 777 chipiron
 
+RUN addgroup --system test
+RUN adduser --system testuser --ingroup test
+
+USER testuser:test
+
 
 # Run the web service on container startup. Here we use the gunicorn
 # webserver, with one worker process and 8 threads.
