--- a/scripts/one_match/inputs/base/exp_options.yaml
+++ b/scripts/one_match/inputs/base/exp_options.yaml
@@ -1,8 +1,8 @@
 seed: 11
-gui: True
+gui: False
 file_name_player_ones: 'Sequool.yaml'
 file_name_player_two: 'RecurZipfBase3.yaml'
 file_name_player_one:  'Stockfish.yaml'
 file_name_player_twos:  'RecurZipfBase3.yaml'
 file_name_match_setting: 'setting_jime.yaml'
-profiling: False
+profiling: True
