--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -10,33 +10,32 @@ WORKDIR .
 RUN set -xe \
     && apt-get update \
     && apt-get install python3-full -y \
-    && apt-get install python3-pip -y \
-    && pip install --upgrade pip
+    && apt-get install python3-pip -y
 
-RUN rm -rf /usr/share/dotnet
-RUN rm -rf /opt/ghc
-RUN rm -rf "/usr/local/share/boost"
-RUN rm -rf "$AGENT_TOOLSDIRECTORY"
 
 RUN apt install libegl1 -y
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt install python3-opencv -y
-RUN pip install gdown
-
-RUN pip install --no-cache-dir --upgrade pip
 RUN apt-get install python3-tk -y
-
 RUN apt-get install wget
 RUN apt-get install curl
 RUN apt install libxcb-cursor0  libxcb-xinerama0  '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev -y
-RUN pip3 install torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+
+
+RUN python3 -m venv .venv
+RUN . .venv/bin/activate
+RUN rm /usr/lib/python3.11/EXTERNALLY-MANAGED
+RUN pip install gdown
+
+
+RUN python3 -m pip install torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
 ADD ./requirements_light.txt requirements.txt
 ADD ./MakefileForTest.mk Makefile
 
 RUN make init
 
-RUN pip uninstall opencv-python
-RUN pip install opencv-python-headless
+RUN python3 -m pip uninstall opencv-python
+RUN python3 -m pip install opencv-python-headless
 
 ADD . .
 
