--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,16 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir}/chipiron
+    pytest --basetemp={envtmpdir}/test/checkmate
 
 
 
 [testenv:mypy]
-basepython = python3.6
+basepython = python3.11
 deps =
     -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
 commands = mypy chipiron
