--- a/tox.ini
+++ b/tox.ini
@@ -26,3 +26,8 @@ deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
 commands = mypy chipiron
+
+[testenv:flake8]
+basepython = python3.11
+deps = flake8
+commands = flake8 chipiron
