--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -24,7 +24,9 @@ RUN apt install libxcb-cursor0  libxcb-xinerama0  '^libxcb.*-dev' libx11-xcb-dev
 RUN python3 -m venv .venv
 RUN . .venv/bin/activate
 RUN rm /usr/lib/python3.11/EXTERNALLY-MANAGED
-RUN pip install gdown
+RUN pip install gdown \
+    && pip install --upgrade gdown
+
 
 
 RUN python3 -m pip install torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
