--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
 commands =
-    pytest --basetemp={envtmpdir}/chipiron
-    pytest --basetemp={envtmpdir}/test/checkmate
+    pytest --basetemp={envtmpdir}
 
 
 
