--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 minversion = 4.14.1
-envlist = py311, flake8, mypy
+envlist = py311, py312, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.11: py311, mypy, flake8
+    3.12: py312
 
 
 [testenv]
