--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,13 @@ basepython = python3.11
 deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
-commands = mypy chipiron
+commands =
+    mypy chipiron
+    mypy scripts
 
 [testenv:flake8]
 basepython = python3.11
 deps = flake8
-commands = flake8 chipiron
+commands =
+    flake8 chipiron
+    flake8 scripts
