--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -57,8 +57,9 @@ sphinx:
 
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 
-# python:
+python:
 
-#   install:
-
-#     - requirements: docs/requirements.txt
+   install:
+    - method: pip
+      path: .
+    - requirements: docs/requirements.txt
