--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-minversion = 4.14.1
+minversion = 4.14.2
 envlist = py311, py312, flake8, mypy
 isolated_build = true
 
@@ -25,6 +25,7 @@ basepython = python3.11
 deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
+    mypy>=1.9.0
 commands =
     mypy chipiron
 
