--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ packages =
 
 install_requires =
     PyYAML>=6.0
-    PySide6>=6.6.1
+    PySide6==6.6.2
     chess >= 1.10.0
     matplotlib>=3.8.2
     sortedcollections>=2.1.0
@@ -35,11 +35,11 @@ zip_safe = no
 
 [options.extras_require]
 testing =
-    pytest>=8.0
+    pytest>=8.1.1
     pytest-cov>=4.1
-    mypy>=1.8
+    mypy>=1.9
     flake8>=7.0
-    tox>=4.13
+    tox>=4.14.2
 
 [options.package_data]
 chipiron = py.typed
