--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 PyYAML
 
 ###### Requirements with Version Specifiers ######
-PySide6>=6.6.1
+PySide6==6.6.2
 chess >= 1.10.0
 matplotlib>=3.8.2
 sortedcollections>=2.1.0
 pandas>=2.1.4
 numpy>=1.26.0
-torch>=2.1.2
+torch>=2.2.1
 bidict>=0.22.1
 numba>=0.59.0rc1
 graphviz>=0.20.1
