--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
     -r{toxinidir}/requirements.txt
     mypy>=1.9.0
 commands =
-    mypy chipiron
+    mypy --strict chipiron
 
 [testenv:flake8]
 basepython = python3.11
