gitignore and mypy in toml

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,19 @@
 chipiron/.idea
 chipiron/.ipynb_checkpoints
 __pycache__
+
+build/*
+
+data/syzygy-tables/
+data/gui/*
+
+
+chipiron/scripts/league/league_data/*
+chipiron/scripts/*/outputs/*
+chipiron.egg-info/*
+chipiron/chipiron.egg-info/*
 chipiron/scripts/one_match/outputs/*
 chipiron/scripts/learn_nn_supervised/learn_nn_supervised_outputs/*
-data/syzygy-tables/
-
-
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
