--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,13 +11,12 @@ version: 2
 # Set the OS, Python version and other tools you might need
 
 build:
-
   os: ubuntu-22.04
-
   tools:
-
     python: "3.12"
-
+  jobs:
+    pre_build:
+     - sphinx-apidoc -o docs .
     # You can also specify other tool versions:
 
     # nodejs: "20"
@@ -63,3 +62,5 @@ python:
     - method: pip
       path: .
     - requirements: docs/requirements.txt
+
+
