--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,6 +16,7 @@ build:
     python: "3.12"
   jobs:
     pre_build:
+     - pip install -e .
      - sphinx-apidoc -o docs .
     # You can also specify other tool versions:
 
