--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,12 @@ install_requires =
     graphviz>=0.20.1
     dacite >= 1.8.1
     customtkinter>=5.2
+    torch>=2.2.1
+    flask
+    flask_cors
+    gunicorn
+    werkzeug
+    bootstrap-flask
 
 python_requires = >=3.11
 package_dir =
