--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -1,5 +1,5 @@
 seed: 11
-gui: True
+gui: False
 file_name_player_ones: 'Sequool.yaml'
 file_name_player_two: 'RecurZipfBase3.yaml'
 file_name_player_one: 'RecurZipfBase4.yaml'
