--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -5,4 +5,4 @@ file_name_player_two: 'RecurZipfBase3.yaml'
 file_name_player_one: 'RecurZipfBase4.yaml'
 file_name_player_twos: 'RecurZipfBase3.yaml'
 file_name_match_setting: 'setting_jime.yaml'
-profiling: False
+profiling: True
