--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ install_requires =
     graphviz>=0.20.1
     dacite >= 1.8.1
     customtkinter>=5.2
-    #torch>=2.2.1   # commented to make github action not have a memory overflow
+    torch>=2.2.1   # commented to make github action not have a memory overflow
                     # but needs to be uncommented for readthedocs compilation
     flask
     flask_cors
