--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -2,7 +2,7 @@ seed: 11
 gui: False
 file_name_player_ones: 'Sequool.yaml'
 file_name_player_two: 'RecurZipfBase3.yaml'
-file_name_player_one: 'RecurZipfBase4.yaml'
+file_name_player_one: 'Uniform.yaml'
 file_name_player_twos: 'RecurZipfBase3.yaml'
 file_name_match_setting: 'setting_jime.yaml'
 profiling: True
