new logics for args and parsing more composed

--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -1,10 +1,15 @@
-seed: 11
+
 gui: False
-file_name_player_ones: 'Sequool.yaml'
-file_name_player_two: 'RecurZipfBase3.yaml'
-file_name_player_one: 'Uniform.yaml'
-file_name_player_twos: 'RecurZipfBase3.yaml'
-file_name_match_setting: 'setting_jime.yaml'
-profiling: True
-use_board_modification:  False
-use_rust_boards: False
+match_args:
+  seed: 11
+  file_name_player_ones: 'Sequool.yaml'
+  file_name_player_two: 'RecurZipfBase3.yaml'
+  file_name_player_one: 'Uniform.yaml'
+  file_name_player_twos: 'RecurZipfBase3.yaml'
+  file_name_match_setting: 'setting_jime.yaml'
+base_script_args :
+  profiling: False
+  testing: False
+implementation_args :
+  use_board_modification:  False
+  use_rust_boards: False
