--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -12,4 +12,4 @@ base_script_args :
   testing: False
 implementation_args :
   use_board_modification: False
-  use_rust_boards: False
+  use_rust_boards: True
