--- a/chipiron/scripts/replay_game/inputs/input.yaml
+++ b/chipiron/scripts/replay_game/inputs/input.yaml
@@ -1,2 +1,3 @@
-file_path_game_pickle: chipiron/scripts/replay_game/games_0_W:Sequool-vs-B:RecurZipfBase3.obj
+file_game_report: chipiron/scripts/one_match/outputs/Sunday-10-13-2024--22:40:58:049918/games_0_W:Sequool-vs-B:Random_game_report.yaml
 gui: True
+
