--- a/chipiron/scripts/one_match/inputs/base/exp_options.yaml
+++ b/chipiron/scripts/one_match/inputs/base/exp_options.yaml
@@ -9,6 +9,7 @@ match_args:
 base_script_args:
   profiling: True
   testing: False
+  universal_behavior: False
 implementation_args:
   use_board_modification: True
   use_rust_boards: False
