--- a/requirements_light.txt
+++ b/requirements_light.txt
@@ -13,7 +13,7 @@ graphviz>=0.20.1
 dacite >= 1.8.1
 customtkinter
 pyarrow
-shakmaty_python_binding
+shakmaty_python_binding>=1.0.4
 
 # for the web app
 flask
