docker, progress, bar, mypy, playerconfigfile, test, dependencies, tox

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -38,7 +38,7 @@ RUN .venv/bin/pip install --upgrade pip
 
 # Get Rust
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-RUN echo 'source $HOME/.cargo/env' >> $HOME/.bashrc
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 RUN make init
 
